# wrm3_settings

./: .gitgnore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.py  wrm3_settings.py
docs/: usage.md
tests/: test_settings.py
